--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -3991,7 +3991,7 @@ body {
 }
 .app-component .js-set-text-color-mode-dark-theme-blue-turkish,
 .js-calc-app-component .js-set-text-color-mode-dark-theme-blue-turkish {
-  color: #2eb3d4;
+  color: #5ab2d4;
 }
 .app-component .js-set-text-color-mode-light-theme-blue-queen,
 .js-calc-app-component .js-set-text-color-mode-light-theme-blue-queen {
@@ -4003,11 +4003,11 @@ body {
 }
 .app-component .js-set-text-color-mode-light-theme-blue-sky,
 .js-calc-app-component .js-set-text-color-mode-light-theme-blue-sky {
-  color: #0083af;
+  color: #0091c2;
 }
 .app-component .js-set-text-color-mode-dark-theme-blue-sky,
 .js-calc-app-component .js-set-text-color-mode-dark-theme-blue-sky {
-  color: #1fb3e4;
+  color: #20b8eb;
 }
 .app-component .js-set-text-color-mode-light-theme-blue-turquoise,
 .js-calc-app-component .js-set-text-color-mode-light-theme-blue-turquoise {
@@ -4049,7 +4049,7 @@ body {
 }
 .app-component .js-set-custom-checkbox-border-background-text-color-mode-dark-theme-blue-turkish:hover,
 .js-calc-app-component .js-set-custom-checkbox-border-background-text-color-mode-dark-theme-blue-turkish:hover {
-  border-color: #2eb3d4;
+  border-color: #5ab2d4;
 }
 .app-component .js-set-custom-checkbox-border-background-text-color-mode-dark-theme-blue-turkish + i,
 .js-calc-app-component .js-set-custom-checkbox-border-background-text-color-mode-dark-theme-blue-turkish + i {
@@ -4057,7 +4057,7 @@ body {
 }
 .app-component .js-set-custom-checkbox-border-background-text-color-mode-dark-theme-blue-turkish:hover + i,
 .js-calc-app-component .js-set-custom-checkbox-border-background-text-color-mode-dark-theme-blue-turkish:hover + i {
-  color: #2eb3d4;
+  color: #5ab2d4;
 }
 .app-component .js-set-custom-checkbox-border-background-text-color-mode-light-theme-blue-queen,
 .js-calc-app-component .js-set-custom-checkbox-border-background-text-color-mode-light-theme-blue-queen {
@@ -4100,7 +4100,7 @@ body {
 }
 .app-component .js-set-custom-checkbox-border-background-text-color-mode-light-theme-blue-sky:hover,
 .js-calc-app-component .js-set-custom-checkbox-border-background-text-color-mode-light-theme-blue-sky:hover {
-  border-color: #0083af;
+  border-color: #0091c2;
 }
 .app-component .js-set-custom-checkbox-border-background-text-color-mode-light-theme-blue-sky + i,
 .js-calc-app-component .js-set-custom-checkbox-border-background-text-color-mode-light-theme-blue-sky + i {
@@ -4108,7 +4108,7 @@ body {
 }
 .app-component .js-set-custom-checkbox-border-background-text-color-mode-light-theme-blue-sky:hover + i,
 .js-calc-app-component .js-set-custom-checkbox-border-background-text-color-mode-light-theme-blue-sky:hover + i {
-  color: #0083af;
+  color: #0091c2;
 }
 .app-component .js-set-custom-checkbox-border-background-text-color-mode-dark-theme-blue-sky,
 .js-calc-app-component .js-set-custom-checkbox-border-background-text-color-mode-dark-theme-blue-sky {
@@ -4117,7 +4117,7 @@ body {
 }
 .app-component .js-set-custom-checkbox-border-background-text-color-mode-dark-theme-blue-sky:hover,
 .js-calc-app-component .js-set-custom-checkbox-border-background-text-color-mode-dark-theme-blue-sky:hover {
-  border-color: #1fb3e4;
+  border-color: #20b8eb;
 }
 .app-component .js-set-custom-checkbox-border-background-text-color-mode-dark-theme-blue-sky + i,
 .js-calc-app-component .js-set-custom-checkbox-border-background-text-color-mode-dark-theme-blue-sky + i {
@@ -4125,7 +4125,7 @@ body {
 }
 .app-component .js-set-custom-checkbox-border-background-text-color-mode-dark-theme-blue-sky:hover + i,
 .js-calc-app-component .js-set-custom-checkbox-border-background-text-color-mode-dark-theme-blue-sky:hover + i {
-  color: #1fb3e4;
+  color: #20b8eb;
 }
 .app-component .js-set-custom-checkbox-border-background-text-color-mode-light-theme-blue-turquoise,
 .js-calc-app-component .js-set-custom-checkbox-border-background-text-color-mode-light-theme-blue-turquoise {
